--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -29,7 +29,20 @@
 	<properties>
 		<java.version>21</java.version>
 	</properties>
+	<repositories>
+
+		<repository>
+			<id>jitpack.io</id>
+			<url>https://jitpack.io</url>
+		</repository>
+
+	</repositories>
 	<dependencies>
+		<dependency>
+			<groupId>com.github.crazzyghost</groupId>
+			<artifactId>alphavantage-java</artifactId>
+			<version>1.7.0</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
