--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -17,3 +17,6 @@ spring.jpa.database-platform=${SPRING_JPA_DATABASE_PLATFORM}
 alphavantage.api.key=${ALPHAVANTAGE_API_KEY}
 finnhub.api.key=${FINNHUB_API_KEY}
 gemini.api.key=${GEMINI_API_KEY}
+
+server.port=${PORT}
+
